@@ -754,6 +754,10 @@ $(document).ready(function() {
 					</td>
 				</tr>
 				<tr>
+					<td align="right"><label><span data-i18n="Active Systems"></span>:</label></td>
+					<td><div id="active_systems"></div></td>
+				</tr>
+				<tr>
 					<td></td>
 					<td><a class="btnstyle3" onclick="AddNotification();" data-i18n="Add">Add</a></td>
 				</tr>
